--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'org.jetbrains:annotations:21.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     apply plugin: 'com.google.gms.google-services'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     apply plugin: 'com.android.application'
@@ -51,4 +52,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.facebook.android:facebook-android-sdk:11.1.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
